--- a/css/main.css
+++ b/css/main.css
@@ -2598,7 +2598,7 @@ body {
   background-color: #888 !important; }
 
 .bg-primary {
-  background-color: #378C3F !important; }
+  background-color: #586376 !important; }
 
 .bg-info {
   background-color: #2CA8FF !important; }
@@ -4124,7 +4124,7 @@ Created using IcoMoon - icomoon.io
     right: 0;
     z-index: 1032;
     visibility: visible;
-    background-color: #999;
+    background-color: #838cbf;
     overflow-y: visible;
     border-top: none;
     text-align: left;
@@ -4132,7 +4132,7 @@ Created using IcoMoon - icomoon.io
     transform: translate3d(300px, 0, 0);
     transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1); }
     .sidebar-collapse .navbar-collapse:before {
-      background: #378C3F;
+      background: #838cbf;
       /* For browsers that do not support gradients */
       /* For Safari 5.1 to 6.0 */
       /* For Opera 11.1 to 12.0 */
